--- a/pom.xml
+++ b/pom.xml
@@ -38,10 +38,14 @@
                         </goals>
                         <configuration>
                             <inputSpec>circleci.yml</inputSpec>
-                            <language>spring</language>
+                            <language>java</language>
                             <configOptions>
                                 <dateLibrary>java8</dateLibrary>
                             </configOptions>
+                            <generateApis>false</generateApis>
+                            <generateModels>false</generateModels>
+                            <generateApiDocumentation>false</generateApiDocumentation>
+                            <generateSupportingFiles>false</generateSupportingFiles>
                         </configuration>
                     </execution>
                 </executions>
@@ -58,11 +62,6 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
             <version>1.5.13</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>2.7.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
